add noise analysis of NEF dynamics system

--- a/design/NEF_dynamics_vs_adaptation.ipynb
+++ b/design/NEF_dynamics_vs_adaptation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4f6764cda4089cd58bcd6b6c30edc09c6a599bd2723e954ded6d822ee95d8bc3"
+  "signature": "sha256:d52fd740942ec92bce4a3b3f0e75a3ebc7317682242518ff4eeb030276df2955"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -759,7 +759,102 @@
       "\n",
       "![Ensemble expansion](figures/ens_expansion.png \"Ensemble expansion\")\n",
       "\n",
-      "In the context of this notebook, Ensembles are comprised of somas and decoding weights $d$ choosen to decode identity. We would like $y(t)=x(t)$. However, somas output spikes, which are very noisy. The injected spike noise is modeled by $\\eta$. After the soma, the spikes are scaled by the decoding weights $d$ such that their mean value is $x(t)$ (because we are decoding identity) and passed as the output $y(t)$ of the Ensemble. Therefore, $y(t) = x(t) + d\\eta$. At this moment, I'm not sure how the magnitude of the injected noise varies with the tuning curves. [TODO: How does $\\eta$ depend on the tuning curves?] However, $d$ decreases in proportion to the height of the tuning curves. That is, for neurons that spike faster, we can scale down $d$ and reduce the amount of spike noise."
+      "In the context of this notebook, Ensembles are comprised of somas and decoding weights $d$ choosen to decode identity. We would like $y(t)=x(t)$. However, somas output spikes, which are very noisy. The injected spike noise is modeled by $\\eta$. After the soma, the spikes are scaled by the decoding weights $d$ such that their mean value is $x(t)$ (because we are decoding identity) and passed as the output $y(t)$ of the Ensemble. Therefore, $y(t) = x(t) + d\\eta$. At this moment, I'm not sure how the magnitude of the injected noise varies with the tuning curves. [TODO: How does $\\eta$ depend on the tuning curves?] However, $d$ decreases in proportion to the height of the tuning curves. That is, for neurons that spike faster, we can scale down $d$ and reduce the amount of spike noise passed to the output. Replacing the Ensembles with their noise injection counterparts, we have"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "![NEF dynamical network with noise modeled](figures/dyn_nengo_noise.png \"NEF dynamical network with noise modeled\")"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For this system,\n",
+      "\n",
+      "\\begin{align}\n",
+      "X(s) &= H(s)\\left[A'(X(s)+d_2\\eta_2(s))+B'(U(s)+d_1\\eta_1(s))\\right] \\\\\n",
+      "(1-A'H(s))X(s) &= A'H(s)d_2\\eta_2(s) + B'H(s)U(s)+B'H(s)d_1\\eta_1(s) \\\\\n",
+      "X(s) &= \\frac{A'H(s)}{1-A'H(s)}d_2\\eta_2(s) + \\frac{B'H(s)}{1-A'H(s)}U(s) + \\frac{B'H(s)}{1-A'H(s)}d_1\\eta_1(s) \\\\\n",
+      " &= \\frac{A'}{1/H(s)-A'}d_2\\eta_2(s) + \\frac{B'}{1/H(s)-A'}U(s) + \\frac{B'}{1/H(s)-A'}d_1\\eta_1(s) \\\\\n",
+      " &= \\frac{A'}{\\tau_{syn}s+1-A'}d_2\\eta_2(s) + \\frac{B'}{\\tau_{syn}s+1-A'}U(s) + \n",
+      "    \\frac{B'}{\\tau_{syn}s+1-A'}d_1\\eta_1(s) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Where we see components for the spike noise injections $\\eta_1$ and $\\eta_2$ and the input $u$. Next, what is the effect of the two noise components when we've set $A'$ and $B'$ to implement a system with first order dynamics governed by $\\tau_{sys}$? Recall that \n",
+      "\n",
+      "\\begin{align}\n",
+      "A' &= -\\frac{\\tau_{syn}}{\\tau_{sys}}+1 \\\\\n",
+      "B' &= \\frac{\\tau_{syn}}{\\tau_{sys}} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Starting with the $\\eta_1$ component,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\frac{B'}{\\tau_{syn}s+1-A'}d_1\\eta_1(s) &= \n",
+      "    \\frac{\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+1+\\tau_{syn}/\\tau_{sys}-1}d_1\\eta_1(s) \\\\\n",
+      " &= \\frac{\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+\\tau_{syn}/\\tau_{sys}}d_1\\eta_1(s) \\\\\n",
+      " &= \\frac{1}{\\tau_{sys}s+1}d_1\\eta_1(s) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "We see that $\\eta_1$ is filtered by the system time constant but is unaffected by the synaptic time constant, which explains why adding spiking input noise did not affect the trend observed in the simulations. Moving on to $\\eta_2$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\frac{A'}{\\tau_{syn}s+1-A'}d_2\\eta_2(s) &= \n",
+      "    \\frac{1-\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+1+\\tau_{syn}/\\tau_{sys}-1}d_2\\eta_2(s) \\\\\n",
+      " &= \\frac{1-\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+\\tau_{syn}/\\tau_{sys}}d_2\\eta_2(s) \\\\\n",
+      " &= \\frac{\\tau_{sys}/\\tau_{syn}-1}{\\tau_{sys}s+1}d_2\\eta_2(s) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "We see that $\\eta_2$ is likewise filtered by $\\tau_{sys}$ but also scaled by a gain of $\\tau_{sys}/\\tau_{syn}-1$. Plotting the gain for fixed $\\tau_{sys}$ as $\\tau_{syn}$ varies,"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# plot the gain as tau_syn varies for fixed tau_sys\n",
+      "tau_syn = np.logspace(-1, 1) # in units of tau_sys\n",
+      "gain = 1./tau_syn - 1\n",
+      "figure(figsize=(6,3))\n",
+      "semilogx(tau_syn, np.abs(gain))\n",
+      "axvline(1, c='r', alpha=.5, label=r'$\\tau_{syn}=\\tau_{sys}$')\n",
+      "legend(loc='upper right')\n",
+      "xlabel(r'$\\tau_{syn}$ $(\\tau_{sys})$', fontsize=18)\n",
+      "ylabel(r'$|\\tau_{sys}/\\tau_{syn}-1|$', fontsize=20);"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAZEAAADsCAYAAAC16pv8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xnc1XP+//HHq31RGZUtUdkJoRRKmUnFIDK2JMQ0yZJ9\nGbdKGDFjm8FgimSt1BgZOyMG87OVIdI3ZFpQsrRrff3+eJ9LV1dXda5zzud8zuec5/12e9+uc53z\nOZ/367r6dF7X572auyMiIpKJanEHICIiyaUkIiIiGVMSERGRjCmJiIhIxpREREQkY0oiIiKSscQk\nETMbZGYfmdlUMxsUdzwiIpKQJGJmrYFzgHbAfsDRZrZzvFGJiEgikgiwB/C2u//k7muA14BeMcck\nIlLykpJEpgKdzGwrM6sH/BrYIeaYRERKXo24A0iHu39qZjcDLwJLgSnA2nijEhERS+LaWWZ2IzDL\n3e8t91zyfhARkQLg7pbpe5PSnIWZbZ36uiNwPPBYxWPmz3fck12GDh1aNPVme85M3l+V96R7bDrH\nbeqYoZ07x/JvGkWJ4/osxWsz3eNzcUy2EpNEgPFm9jEwERjo7osqHjBqVP6DyrUuXboUTb3ZnjOT\n91flPekem85xcf275VscP2cpXpvpHl8I12Yim7MqY2beqpUzYwZUS1JqlKJ3bZcuXDtpUtxhiFTK\nzPBSaM5KR6NG8OKLcUchsr4uLVrEHYJIZIoqiZx7Ltx77+aPE8knJREpZokY4puu3r3hqqtg9mxo\n3jzuaERkY8wybj2RLETRfVFUSaR+/ZBIRoyA666LOxoR2ZRi6Y9NiqgSd1E1ZwEMGAAjR8KqVXFH\nIiJS/Iouiey9N+yyCzz1VNyRiIgUv6JLIhA62O+5J+4oRESKX1EmkV69YOpUmD497khERIpbUSaR\n2rWhXz+47764IxERKW5FmUQAfvc7eOghWL487khERIpXYob4mtnVQB/CEvAfAWe5+4qNHd+iBbRv\nD2PHwpln5idGEZGKvvjiC0aMGLHR1zt06EDPnj3zGFFuJWLtLDNrAfwL2NPdV5jZWOBZdx9d7hiv\n+LM8/TTccAO8/XY+oxWp4NprQ5GfpdZrijuMSi1cuJCLLrqI7777jpkzZ9KiRQtq1arFI488Qt26\ndRNb78Z+59munZWUO5FFwCqgnpmtAeoBczf3pqOOggsugHffhXbtog5RRHImV0k3g/NMnjyZkSNH\nMnfuXCZNmkTfvn1zE0uB1putRCQRd//ezG4FZgHLgRfc/eXNva96dbjwQrjtNnj88cjDFJFcifHO\n7fDDDwdg/PjxHHnkkVmfL93mrFzXmy9Jac7aGXga6AQsBJ4Axrv7o+WO8aFDh/78ni5dutClSxcW\nLYKWLWHyZNhpp3xHLoKasypRyM1ZZY488kiee+65oqm37Hc+adIkJpXbmmDYsGEl0ZzVFnjL3b8D\nMLO/A4cAj5Y/6NpK/qM2bAhnnQV//nO4IxER2ZzFixdTr1699Z6bMGECdevWpWHDhtSpU4cJEyYw\nfPhwhg0bRteuXXnyySfp2bMnL7/8Mv369WOnDP5qrUq91113HZdeeinPP//8z6937Nhxs3WU/YFd\nZtiwYVWOs7ykDPH9FOhgZnUtrCLWFfgk3TcPGgSjR8PChZHFJyJFpEGDBkyYMGG958aOHcuCBQvo\n2LEjzZo1Y2HqA2X27Nm0aNGChQsX0qlTJ2rUqMGyZcsir3fWrFnUr19/vdfjkIgk4u7/BR4C3gM+\nTD39t3Tf37w59OgRVvcVEamqe+65h+HDhzN9+nQ+/PBD6tevT+PGjVm1ahU1atSgQYMGNG7cGICp\nU6fSsGHDvNRb8fU4JCKJALj7H919b3ffx93PcPcqrdN76aWhSUur+4pIVbVs2ZIZM2aw2267sdde\ne1GnTh3WrFnDn/70J9q0acP777//c8d406ZN+eabb/JSb8XX45CIjvV0VDZPpKLDD4dzzoHTTstT\nUCKgjvVKJKFjPR3XXHMNAwcOpFmzZgVfb6nPE8mJSy+FIUPCxlXaWE1EMjVq1Ci22GIL9ttvv7wm\nkLjq3ZSSuhNZuxb22issE5+68xSJnu5ENlAsdyJJEtWdSGL6RHKhWrVwN3LrrXFHIiJSHEoqiQCc\nfjq89x5MmxZ3JCIiyVdySaROnbDzoSYeiohkr+SSCMDAgTB+PMybF3ckIiLJVpJJpGlTOOkk+Otf\n445ERCTZSjKJAFxySRiltXRp3JGIiCRXIpKIme1uZlPKlYVmdmE259x9d+jcOSQSEck/M1PJY4lK\nWpMNzWwboE6O6lzu7vOr8gZ3nw7sn4qlGmFDqiezDWTwYOjWLfSRVFg4U0QipDkixSPdGeu/B3Kz\noljYpXBQFu/vCnzu7rOzDWTffeGQQ+C+++Dii7M9m4hI6Ukribh7Nh/6uXYK8FiuTjZkSNhGd8AA\niHD7ZBGRopSIPpEyZlYLOIaws2FOtGkT9l/XMvEiIlWXtAUYjwTed/dvK3ux/M6GFXfv2pQhQ+DY\nY6F//zAZUUSkWFXcHjdbkS7AaGa93T1nTU9mNgZ4zt1HV/LaZhdg3JSjj4Yjj4TzzssmQpFKaAFG\nKWCFvgDjObk6kZnVJ3Sq/z1X5yxvyBC46SZYsSKKs4uIFKfIkoiZ1QVa5+p87r7U3Zu4++JcnbO8\ngw6C1q1h1Kgozi4iUpzSTiJm9qGZrUmVtZspa4ClQOPoQs+9IUNg+HBYuTLuSEREkqEqHesdgNeA\n1cD0NI6vA5yUSVBxOfjgMJN99Gj47W/jjkZEpPClnUTcfZmZDQQGuvtZ6bzHzPbOOLKYDB0KffrA\nmWdCzZpxRyMiUtiq1Cfi7u8CTavwlrlVCyd+hx4KrVrBww/HHYmISOHLpGP9sioce3oG54/d0KFw\nww0aqSUisjlVTiLu/mkVjq10UmChO+ww2GMPuPfeuCMRESlsiVr2JJ9uugluvBEWLow7EhGRwqUk\nshH77htmsP/xj3FHIiJSuHKWRMzs/lydq1Bcd11o0pqbuOEBIiL5kcs7kQNyeK6CsOOOcPbZWvZI\nRGRjEtOcZWZbmtl4M5tmZp+YWYd81Hv11fCPf8Ann+SjNhGRZElMEgH+DDzr7nsC+wLT8lHpL34B\nV14ZkomIiKwvEUnEzBoBndz9AQB3X+3ueRs3df758MEH8MYb+apRRCQZEpFEgJbAt2Y2yswmm9kI\nM6uXr8rr1IHrr4crroAIt18REUmcpCSRGoSO+7+6+wGEFYKvymcAp50GS5eG/hEREQmSsj3uHGBO\nau0ugPFUkkQy3R43HdWrw803w0UXwTHHQI2k/OZERMop2O1xzWyKu++fk5NVfv7XgXPc/f/M7Fqg\nrrtfWe71rLbHTYc7dO0KJ54IAwZEWpUUE22PKwUs2+1xk/T39AXAo2ZWC/gcSGs5+lwyg1tuCTPZ\nTzoJttoq3xGIiBSWpPSJ4O7/dfd27r6fu/fK5+is8vbfH3r1CrsgioiUulwmkZIZt3TDDfDEE2HY\nr4hIKctlEsl781JcttoqJJLzzoO1a+OORkQkPjlLIu7+31ydKwnOPhtWrdIOiCJS2vLWJ2JmDc3s\nEjNrl686o1StGtx9N1x1lfYcEZHSFWkSMbNbzGyxmb0DnAOMBVpHWWc+tWsX5owMHRp3JCIi8Yj6\nTmQu0Ay4EtgF+ADoFXGdeXXjjfDYY/DRR3FHIiKSf1EnkcXuvsjdX3X3gcDW7n5MxHXmVZMmMGxY\nWKRR62qJSKmJOol8aGanlH0T+ZTymPTvD4sXw+OPxx2JiEh+RZ1ErgaGmtms1Aq8fcxsm4jrzLvq\n1UMn++WXw6JFcUcjIpI/USeRN4F9gIOAV4CuwISI64zFwQdD9+6ayS4ipSXqJHI/0BdY6u6PuPuZ\n7t4xkxOZ2Zdm9qGZTUmN9io4f/oTjBsHb70VdyQiIvkR9QKMLwBfA41Sq/BOzqJfxIEu7v59zqLL\nscaN4c47oV+/sCRKnTpxRyQiEq2o70S6Aw8CrVJffzSzZ83sPDOrncH5Ml6uOF9OOAFat4brros7\nEhGR6EWaRNz9B3d/0t0vcPd9gP2An4CewLtmtnVVTge8bGbvmdlvo4g3V+66C+6/H95/P+5IRESi\nFWlzlpm1BVoAz7j7cnf/0szGufsYMzuUMHrr4jRPd6i7f21mTYGXzOxTd/93+QOi3NmwKrbdFm69\nNTRrvfsu1KoVSxgiIhso2J0NKz252f1AbeAI4HXCZlIt3f3k1Ot93f2hDM47FFji7reWe66gpqG4\nw9FHQ/v2GrFV8rSzoRSwbHc2jLpP5D3gImBXwtDeeaT2RjezOcCO6ZzEzOqZWYPU4/pAN6CgFxox\ng/vuCx3tU6fGHY2ISDSiHp11H6H/41/uPqbCa92Bb9M8zzbAk2YGIeZH3f3FnEUZkR12CGtr9esX\nhv3WSNJmxCIiaYi6Y31tqmN9g8XS3f1jd5+f5nlmunubVGnt7sNzH200zjkHGjSA22+POxIRkdyL\nein4M1JDerc2sxvNbGCU9RUiMxgxAm6+GaZPjzsaEZHcirpPxAgz1i8H2gPzzeyiiOssOK1awfXX\nQ+/esHJl3NGIiORO1ElkC3dfQBid9Rd3Hw8sjbjOgjRgQOgjueaauCMREcmdrJKImbXYzCEzzewD\noBHwgpnVBJZlU2dSmYUJiI8/Di+9FHc0IiK5ke2dyIxN7Znu7s8AnYA9gRWEdbSaZVlnYjVpAqNH\nw5lnwrfpjksTESlg2SaR6kCDTR3g7ovd/afUTMC2wN1Z1plov/oV9OkDZ52lnRBFJPmi7hNZj7t/\n6e4l2SdS3vXXw7x5YSMrEZEk0/S3GNSqBY89BoccAp07wz77xB2RiEhmcnEncoOZjTWzK82sW2qB\nRNmMXXcNm1ideiosXx53NCIimclFEhkMXAksB64A5pjZHDObaGZn5uD8PzOz6qmdDZ/O5XnjcsYZ\nYe+Ryy6LOxIRkcxkm0SWAdVTfR1/cfeuwNbAZcASoF+2AVYwCPiEsLdI4pnBvffCs8/CE0/EHY2I\nSNVlm0QmAOvtme7uC919jLv3dvfDsjz/z8xsB+AoYCQJ2OEwXVtuCRMmwMCB8PHHcUcjIlI12SaR\ngcDuZnZcLoLZjNsJy6eszUNdeXXAAXDLLXD88fDjj3FHIyKSvqySiLsvTW0wFemdgZkdDcx39ylR\n1xWXM86AI46Avn1hbdGlSREpVjkZ4uvuT+biPJtwCHCsmR0F1AEamtlD7t63/EGFsj1upm6/HQ4/\nHP7wBxg8OO5oRKQY5X17XDM7nrAS72PARHdfkbPaM2BmnYHL3P2YCs8X1Pa4mfrqK2jXLiwff9RR\ncUcjOaHtcaWARb49buou42pgH+AtM3vIzLqbWV5nu1cMK8a6I7X99jBuXFhf67PP4o5GRGTT0koE\n7v6puw9x9wOBuwijpKaY2Z1mdnCkEW4Yy2vufmw+68y3Qw+FoUOhVy9YWvKLxIhIIavy3YS7v+Pu\ng4ADgIlA/9QEwD+Y2V45j7BEDRwYRm2dc44WahSRwpVxk5S7r3H3l9z9LOBgYDIwzMzeNrMrzKx5\nzqIsQWZwzz3w+ecwbFjc0YiIVC4n/Rqppd4nuPuJQDdgATDSzCaZ2QAz2yoX9ZSaunXh6afhoYfg\nwQfjjkZEZEM57xxPzVh/wN27A6cQhuRONLN/mllvM6uX6zqL2TbbwDPPwJVXwiuvxB2NiMj6Ih1h\n5e7fuPsd7t4RuAjYBRgTZZ3FaM89w4itU0+FqVPjjkZEZJ28DdN198/c/bpiH1kVlc6dw2TEX/86\nzCURESkE2pQqQU47DWbOhGOOgddegy22iDsiESl1kd6JmNkZZvasmW1tZjea2cAo6ysF11wDbdrA\nKafA6tVxRyMipS7q5iwjLJlyOdAemG9mF0VcZ1Er24NkxQo4/3zNIRGReEWdRLZw9wXAEcBf3H08\noDnYWapZE8aPh3ffhauuUiIRkfhEnURmmtkHQCPgBTOrSdgNsUrMrE5qEuMHZvaJmQ3PeaQJ06gR\nvPBCGP77hz/EHY2IlKpIO9bd/Rkzex1YBawAvgX+mMF5fjKzw919mZnVAN4ws47u/kaOQ06UJk3g\npZfCyK369eHii+OOSERKTeSjs9x9cdljM2tLSCSZnKfsDqYWUB34Pvvokm+77eDll+Gww0Ii6d8/\n7ohEpJREmkTM7B3gK+A14HVgcqabfqSWnp8M7Azc4+6f5CzQhNtxx5BIunSBevWgT5+4IxKRUhH1\nnUh3oAvwS6AfsKOZvQk8A4ysygZX7r4WaGNmZf0rXdx9Uvljkr6zYTZ22QVefBF+9auQSHr1ijsi\nESlEed/ZMJfMrAVwG7AFsC3Q1d3nZ3CewcByd7+l3HNFsbNhtqZMgR49YNQo7YxYMLSzoRSwyHc2\nzIaZtTWz35hZXQB3/xIY5+7dgHMJOyamc54mZrZl6nFdwpDhKdFEnWz77w9PPRV2RvzHP+KORkSK\nXdTNWecCtYG7U6O0PgdaAmPc/U0z2znN82wHjE71i1QDHnZ3rWm7ER06wHPPhXW2li8PCzeKiEQh\n6iTyPjAOWEnYUnc74D4AM5sD3JvOSdz9I8JOipKmAw8Mne3du8OyZXD22XFHJCLFKOokcg/QE3jV\n3SsuAd+dDIf7Snpat4ZJk6Br17BX+4UXxh2RiBSbqJNIX+Bk4C0zuxGY4+5/BXD3jyOuW4Bdd4XX\nXw+jtpYuhavT6oUSEUmPFmAsATvtBP/+NzzySFgFWIPYRCRXtABjidhuu7AHyfPPw3nnaRl5EcmN\nRCzAKLnRpAm8+ip89hkcdxwsWRJ3RCKSdFklkdTkwY1y92eATsCehAUYvwaaZVOnZKdhw7Dy77bb\nhvW2tNWuiGQj2zuRGWbWblMHuPtid/8pNZ28LXB3lnVKlmrWhBEj4De/gUMOgalT445IRJIq29FZ\n1YEG6R6cmrEuBcAMfv97aNECfvlLeOyxMBRYRKQqou4TkQLXu3fYJfG00+DBB+OORkSSJhFJxMya\nm9mrZvaxmU01M02by6HDDgtzSa6/Hq64QiO3RCR9uUgiN5jZWDO70sy6mVnTHJyzolXAxe6+N9AB\nOM/M9oygnpK1++7wzjvrVgFesCDuiEQkCXKRRAYDVwLLgSuAOWY2x8wmmtmZOTg/7v6Nu3+QerwE\nmAZsn4tzyzqNG4d5JG3bhvL++3FHJCKFLtsksgyo7u5fuvtf3L0rsDVwGbCEsBFVTqWGFe8PvJ3r\ncwtUrw433QS33hruSNRPIiKbku3orAlAR+DFsifcfSEwJlVyysy2AMYDg1J3JBKRE06APfeE448P\nzVx33AG1asUdlYgUmmyTyEDgATM7zt0j3QIpNdt9AvDIxuoq5e1xo7DXXiGB9O0b9m8fMybs5y4i\nyVWQ2+Oa2fHu/mQO4tnY+Q0YDXzn7hdv5BhtjxuRtWvh5pvh9tvhnnvCXYpUgbbHlQJWENvjRplA\nUg4F+gCHm9mUVOkRcZ2SUq1aWEL+6afDEOD+/cOy8iIiaTVnmdk2QJ1NHOKEZd/Tsdzd56d5bDi5\n+xskZE5LMWvfPgwBvuCCsHPi44+HPd1FpHSl2yfye6BhjupcBAzK0bkkzxo2hNGjwzIp3bqFpVMG\nDQp3KyJSetJKIu6uD31ZT+/e0KFDWC7l+edh5Eho3jzuqEQk3/T3o2SsVauwXErHjnDAAfC3v2nX\nRJFSoyQiWalZEwYPDptdjRwZ9nL/4ou4oxKRfFESkZxo3RreeguOOgoOOgj+/GdYsybuqEQkakoi\nkjM1asBll4VkMmECdOoE06bFHZWIRElJRHJut91g0qTQ6d6pU5hjonklIsVJSUQiUa0anHcefPgh\nzJ4d1uEaN04d7yLFRklEIrX99vDII6HccAMccYSauESKiZKI5MVhh8HkyXDsseHx5ZfD4sVxRyUi\n2UpEEjGzB8xsnpl9FHcskrkaNeDCC2Hq1LBz4u67hwUdV62KOzIRyVQikggwCtCCi0Vim21g1Ch4\n5hl48skwPHjCBPWXiCRRIpKIu/8b+CHuOCS39t8fXnwR7ror9JccfHCYAS8iyZGIJCLF7Ygjwn7u\nF1wAZ5wBxxwDH6nhUiQRlESkIFSrFuaVfPop/PKXIbGccAJ88EHckYnIpmS7PW5B0fa4yVe7Nlx8\nMfzud3DffeuWURk8OOxhIiLZefXVSbzyyiRWr87N0kQ52R43H8ysBfC0u++zkde1PW4RWr4cRowI\n2/MecAAMGQLt2sUdVRVpe1ypxJo1sGxZ5WX58nWl/Pc//bSuVPy+rKxYseHjFSvWlVWroFat8Adb\n7dqwYEF22+Mm4k7EzB4HOgONzWw2MMTdR8UcluRB3bphWHD//nD//dCrVxgafOml0KMHWMaXvkh6\n3MOH7+LFoSxatP7jJUs2XpYurbwsWwYrV0K9euuX+vXDNb+pssUW0KRJeFynzoaldu0Nv5YvtWqt\n//8m2/9DibkT2RzdiZSGlSthzBi49VZYvRouuST0pdTZ1ObNcdOdSKzWrg0f9t9/Dz/8AD/+uK4s\nXLjh94sWha/lH0PY1bNBg1DKP27QIHywVyz166/7WrHUqxeu2UL4I8gsuzsRJRFJJHd45ZWQTD74\nIKzTde650Lhx3JFVQkkkZ1asgG+/DWXBAvjuu1DKP/7uu5AwypLGwoXhw/wXv1hXttwSGjUKX8tK\no0brSsOG6742bFjgf6RkKdskkojmLJGKzKBr11A+/hhuuw122SU0d517LrRtG3eEkg73cAcwb14o\n33yz7vG8eTB/fkgYZV9/+gmaNg2lSZPwR0PjxuHxzjuHQRiNG8NWW4VSljBq6JMuMvrVSuLtvXfo\nLxk+HB54AE48MXyonHsunHJKaDqQ/FuyBObMCWXuXPjqK/j66w2/1q4dVjHYdtvwtawcdFD4WpY0\nmjYNdweF0AQk66g5S4rOmjXwwgthXa633oI+fWDAgLAcfSyKsDlr1aqQGP73v3Vl1qx1SWPOnND0\ntMMOoWy/PTRrBtttFx5vv314vN12SvJxU3OWSAXVq4f5JUcdFT7cRowIExhbtAgz4k8+OTRzyMat\nXRualr74Yv0ycyZ8+WVoatp2W9hpJ9hxx/D1wAPhuONC0mjePPyOdddQ/HQnIiVh9eqwTteDD4av\n3buHhNKtWx7aywv0TmTt2tCkNGNGKP/3f+sez5wZOpRbtVq/tGwZknGzZlCzZtw/geSCRmelKIlI\nur7/HsaODQll1izo3Tv0nbRtG9FfzjEnkRUrQoKYNm1d+fTTkCwaNAjbGe+66/qlVaswokmKn5JI\nipKIZGLaNHj00ZBU1q6Fk04KzV377ZfDhJKnJLJ6dUgWH320rnzySdieuGVL2GOP0C9UVnbbLdxt\nSGlTEklREpFsuMOUKSGZjBsXZvWefHIY6dW6dZYJJYIk8sMPId4pU+C//w172U+fHpqZ9tlnXdl7\n7zD0uVatnFYvRURJJEVJRHLFHd59NySUv/89rDB87LHQsyd07JhBH0qWSWT+/BBPWdKYPDlMrttv\nv7AnS5s26xJG/foZVyMlqmSSiJn1AO4AqgMj3f3mCq8riUjOuYe/8p96KpT//S+M+urZM3TOp9Nv\nMOnMM+ny4INp1bd0aUgS77wTyttvhxnXBx4Yyv77h7LrriG5iWSrJJKImVUHpgNdgbnAu8Cp7j6t\n3DFKIhK52bNh4sSQUP7zn7CicI8eoeyzT+XNXtd26cK1kyZVer5Zs+CNN+DNN0OZMSM0nx10UCjt\n24fmKCUMiUq2SSQpl+ZBwGfu/qW7rwLGAD1jjikSkzbyYZPEerM9Zybvr8p70j22/HHNm4d1ul58\nMcyjuOSSkAh69JjEDjtAv36hGeyNN8JEx//8Jyzi98478N574fu774ZTTw3zK9q1C/vL77xz2D/l\n++/D3cedd8Lpp4fO70JKIHFcn6V4baZ7fK6OyUYBXZ6b1AyYXe77Oannio6SSHbvjzqJlFe/Phx9\ndNgjvn//Sbz2Wtjz5LHH4Kqr4PLLQ5KZMQPOPz/Mmr/wwtBc1a1bWEDym29CErnkknDXUbt22uHH\nQkkk8/cXaxJJSnPWCUAPd/9t6vs+QHt3v6DcMYX/g4iIFKBSWPZkLtC83PfNCXcjP8vmlyAiIplJ\nSnPWe8CuZtbCzGoBJwMTY45JRKTkJeJOxN1Xm9n5wAuEIb73lx+ZJSIi8UhEn4iIiBSmpDRniYhI\nASrqJGJmLc1spJk9EXcsImXMrL6ZjTazv5lZ77jjESmTyWdmUScRd5/p7ufEHYdIBb2Ace7eHzg2\n7mBEymTymZmIJGJmD5jZPDP7qMLzPczsUzObYWZXxhWfSBWv0fKTZ9fkNVApOVF/fiYiiQCjgB7l\nn0itp3VX6vm9gFPNbE8zO93Mbjez7WOIU0pX2tcoYY5T2bynpPwflOSqyrVZZYm4gN3938APFZ6u\ndD0td3/Y3S9296/MbCszuxdoozsViVJVrlHg78AJZvZXNN9JIlaVazOTz8xEzBPZiMrW02pf/gB3\n/x4YkM+gRMqp9Bp192VAv3hCEgE2fm1W+TMzEXciG6EJLlLodI1KocrZtZnkJLLZ9bREYqZrVApV\nzq7NJCcRraclhU7XqBSqnF2biUgiZvY48Bawm5nNNrOz3H01ULae1ifAWK2nJXHRNSqFKuprU2tn\niYhIxhJxJyIiIoVJSURERDKmJCIiIhlTEhERkYwpiYiISMaUREREJGNKIiIikjElERERyZiSiIiI\nZExJRCRPzKyBmf0+hnoHm1ndfNcrpUFJRCQPzKwGcB9wfwzVPwI8YGYWQ91S5JRERPLjfOB5d5+X\n74rdfSbwMnBZvuuW4qcFGEUiZmZbAq8BB7j7mphiqAlMBjq5+49xxCDFSXciItE7C3gqrgQCkNpH\n+5+pWERyRklEJHpHAW/EHQTwOtAr7iCkuCiJSNEys93M7G0zW2NmayuUlWa2XR5iqAV0At4ugPje\nAdqamf7fS86oT0SKkpk1IoxKugX4EjgdmEroFwBY7u7f5iGOHYHp7l63wvN5jy81OmslsIe7f57L\nc0vpqhFfN+aoAAAC3UlEQVR3ACIR6QD0d/evAcysHXC7uy/NcxxbAwsreT7v8bm7m9kPwFaAkojk\nhJKIFCV3f6HssZnVB3aKIYFAaDLe4HY/xvjWVBaPSKbUNiqloBswLaa6vwV+sZlj8hnfVkDe56pI\n8VISkVJwLPB+THV/A1RP3W1sTF7iM7OGQHWURCSHlESkqKVGIv2adR3WZc+bmZ1nZieb2RWpda3q\nmtm5ZjYmtUwJZjbCzPY1s4vM7I9mdpyZnW5mD6ezHpW7Lwf+H9C2KvFtIsaBlcW3seMrnPJA4EN3\nX7m5uEXSpSQixW57YClheGt53YH67j4WaAbsABwNPADsB9RKHdct9f3jhBFUr7v7w0AdYI80Y3gG\n6FLF+CqLcRBh7a2K8c3YxM9UXmfgH2nGLJIWJREpau4+x91buvuSCi99C1xlZhOBie4+DXgO2Av4\n3N2XmVlL4DtgAnAIMM7dv0+9vzXwWZphPAIcX9kCiJuIb4MYgTsqiy91t7Oxnwn4+Y7nOOJZAFKK\nmJKIlCR3f5/wF/2/gBGp55YQmpYmpg47BHjL3ZcRJgy+AWBmuwLzgRVmVieNuuYQFkA8IZsYNxbf\npn6mcnoBk9x9blViENkcJREpOWbW2cyed/fZ7n4H5T6ICfM6/pd63BX4T+rxoaxbuqQn8BTwG6Bm\nmtUOBvqYWZMMY3xzU/Ft4nhSdfYF8r6XiRQ/zViXkmNmOxDuCr4nfCj/092np147GDgFeA+4G2hD\nmFH+urt3TB1zLOvuUiZuUMHG690WuMrdL8o0xsric/cvNvMz3Qbc4u5fpRurSLqUREQqkepv+Je7\nt4w7lsoUenxSOtScJZJiZoea2cupby8DrosznooKPT4pTboTEUlJ/XV/IrAEqO7ud8Yc0noKPT4p\nTUoiIiKSMTVniYhIxpREREQkY0oiIiKSMSURERHJmJKIiIhkTElEREQypiQiIiIZUxIREZGMKYmI\niEjG/j/ISf382jGRZgAAAABJRU5ErkJggg==\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0x7fca1ffd4290>"
+       ]
+      }
+     ],
+     "prompt_number": 29
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "we see that that the gain of the noise injected by the recurrently connected Ensemble has three regions.\n",
+      " - When $\\tau_{syn} < \\tau_{sys}$ (synapse is faster than the system), the noise is strongly amplified. This explains why we needed a high spike rate for $\\tau_{syn} \\ll \\tau_{sys}$.\n",
+      " - When $\\tau_{syn} = \\tau_{sys}$ (synapse is the same speed as the system), the gain is $0$ (because there is no recurrent connection).\n",
+      " - When $\\tau_{syn} \\gg \\tau_{sys}$ (synapse is slower than the system), the gain magnitude approaches $1$. This explains why increasing $\\tau_{syn}$ beyond $\\tau_{sys}$ had little to no affect on the required spike rate.\n",
+      " \n",
+      "Putting $\\eta_1$ and $\\eta_2$ back into the equation for $X(s)$, we have\n",
+      "\n",
+      "\\begin{align}\n",
+      "X(s) &= \\frac{B'}{\\tau_{syn}s+1-A'}U(s) + \n",
+      "    \\frac{1}{\\tau_{sys}s+1}d_1\\eta_1(s) + \\frac{\\tau_{sys}/\\tau_{syn}-1}{\\tau_{sys}s+1}d_2\\eta_2(s) \\\\\n",
+      "\\end{align}"
      ]
     },
     {
