reword some discussion

--- a/design/NEF_dynamics_vs_adaptation.ipynb
+++ b/design/NEF_dynamics_vs_adaptation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d52fd740942ec92bce4a3b3f0e75a3ebc7317682242518ff4eeb030276df2955"
+  "signature": "sha256:24cf2e252725cc8b9b758ed50a127205703ae5cd04f77ab26cf07e1635b09861"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -523,7 +523,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We see that above $\\tau_{syn}=\\tau_{sys}$ ($|A'|>1$), there isn't much reduction in firing rates required to maintain the same RMSE. The minimum firing rate occurs when $\\tau_{syn}$ is twice $\\tau_{sys}$"
+      "We see that above $\\tau_{syn}=\\tau_{sys}$ ($|A'|>1$), there isn't an additional reduction in firing rates required to maintain the same RMSE."
      ]
     },
     {
@@ -714,13 +714,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "These plots are in the same style as before. I also plot the input spike rate in the right column. \n",
+      "These plots are in the same style as the no input-noise simulations above. I also plot the input spike rate in the right column. \n",
       "\n",
       "Note that for $\\tau_{syn}=\\tau_{sys}$, I do not show the Ensemble spike rate. In this case, $A'=0$ so there is no feedback, and the only meaningful spike rate is the input spike rate.\n",
       "\n",
-      "Note also that we avoided the Ensemble range issue of the previous setup because the Ensemble's input is after the filter. In the previous setup, the Ensemble input came before the filter.\n",
-      "\n",
-      "Consistent with the observations of the previous network setup, we see that the required spike rate to maintain a fixed RMSE decreases with longer synaptic time constants but only up to a point. The minimum spike rate is when $\\tau_{syn}$ is twice $\\tau_{sys}$. That is, including spiking noise at the input to the network does not change the conclusions."
+      "Note also that we avoided the Ensemble range issue of the previous setup because the Ensemble's input is after the filter. In the no input-noise setup, the Ensemble input came before the filter."
      ]
     },
     {
@@ -744,6 +742,13 @@
      "prompt_number": 11
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Consistent with the observations of the no input-noise setup, we see that the required spike rate to maintain a fixed RMSE decreases with longer synaptic time constants but only up to when $\\tau_{syn}=\\tau_{sys}$."
+     ]
+    },
+    {
      "cell_type": "heading",
      "level": 1,
      "metadata": {},
@@ -755,11 +760,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "To understand why the required number of spikes doesn't decrease with increasing $\\tau_{syn}$, we expand Ensembles of the system to understand where noise is coming from.\n",
+      "To understand why the required number of spikes doesn't decrease with increasing $\\tau_{syn}$, we expand Ensembles of the system to understand where noise is coming from and how they propagate to the system state.\n",
       "\n",
       "![Ensemble expansion](figures/ens_expansion.png \"Ensemble expansion\")\n",
       "\n",
-      "In the context of this notebook, Ensembles are comprised of somas and decoding weights $d$ choosen to decode identity. We would like $y(t)=x(t)$. However, somas output spikes, which are very noisy. The injected spike noise is modeled by $\\eta$. After the soma, the spikes are scaled by the decoding weights $d$ such that their mean value is $x(t)$ (because we are decoding identity) and passed as the output $y(t)$ of the Ensemble. Therefore, $y(t) = x(t) + d\\eta$. At this moment, I'm not sure how the magnitude of the injected noise varies with the tuning curves. [TODO: How does $\\eta$ depend on the tuning curves?] However, $d$ decreases in proportion to the height of the tuning curves. That is, for neurons that spike faster, we can scale down $d$ and reduce the amount of spike noise passed to the output. Replacing the Ensembles with their noise injection counterparts, we have"
+      "In the context of this notebook, Ensembles are comprised of somas and decoding weights $d$ choosen to decode identity. We would like $y(t)=x(t)$. However, somas output spike. That is, they add noise to $x(t)$. The injected spike noise is modeled by $\\eta$. After the soma, the spikes are scaled by the decoding weights $d$ such that their mean value is $x(t)$ (because we are decoding identity) and passed as the output $y(t)$ of the Ensemble. Therefore, $y(t) = x(t) + d\\eta$. We know that $d$ decreases in proportion to the height of the tuning curves and the number of tuning curves. That is, for a faster Ensemble spiking rate, we can scale down $d$ and reduce the amount of spike noise passed to the output. Replacing the Ensembles with their noise injection counterparts, we have"
      ]
     },
     {
