derive df/dt rate alif

--- a/neuron/adaptive_LIF_neuron.ipynb
+++ b/neuron/adaptive_LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:adbc19a8656b463d5b60601289915ca3987677644cdaf510a7fa10c7ea1830ed"
+  "signature": "sha256:55f234a40b623ac8b0d3b491274b184a9c455a3f3b568104920867e97852407d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1114,7 +1114,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can find the intersection between $f(u_f;u_{in})$ and $u_f=\\alpha_f'f$ numerically. To find the intersection, we use binary search (See [Appendix](#Do-not-use-this-method-to-find-the-firing-rate-with-mean-feedback-approximation) for why) on $f$ given a fixed $u_{in}$ to find where $f(u_f;u_{in})$ is consistent with $u_f=\\alpha_f'f$."
+      "We can find the intersection between $f(u_f;u_{in})$ and $u_f=\\alpha_f'f$ numerically. To find the intersection, we use binary search on $f$ given a fixed $u_{in}$ to find where $f(u_f;u_{in})$ is consistent with $u_f=\\alpha_f'f$. An intuitive alternative would be to calculate the firing rate given an input, calculate the feedback, recalculate the firing rate with the input and feedback, and repeat until convergence, but this method is susceptible to errors around threshold as discussed in the [Appendix](#Do-not-use-this-method-to-find-the-firing-rate-with-mean-feedback-approximation)."
      ]
     },
     {
