--- a/neuron/adaptive_LIF_rate_neuron.ipynb
+++ b/neuron/adaptive_LIF_rate_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1147518f0307e303b10071e1cdd3c18e0e354e1c0dc7f5f4247fc4fd08189a7d"
+  "signature": "sha256:414cfa6a70d0b4c4e3259da2e2d4f412d01e037a9b9b6a8ad0559a3aa95698df"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -59,23 +59,24 @@
       "The LIF neuron firing rate is described by\n",
       "\n",
       "\\begin{align}\n",
-      "f &= \\frac{1}{t_{ref}-\\tau_m\\left(1-\\frac{1}{u}\\right)} \\\\\n",
+      "f &= \\frac{1}{t_{ref}-\\tau_m\\left(1-\\frac{x_t}{u_{net}}\\right)} \\\\\n",
       "\\end{align}\n",
       "\n",
       "where\n",
       " - $t_{ref}$ is the refractory period\n",
       " - $\\tau_m$ is the soma membrane time constant\n",
-      " - $u$ is the net input to the soma"
+      " - $x_t$ is the threshold (typically set to $1$)\n",
+      " - $u_{net}$ is the net input to the soma"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For the nonadaptive LIF neuron, the net input to the soma is simply the input to the neuron. That is, $u=u_{in}$. However, for the adaptive LIF neuron, there is also an adaptive negative feedback $u_f$ input, so\n",
+      "For the nonadaptive LIF neuron, the net input to the soma is simply the input to the neuron. That is, $u_{net}=u_{in}$. However, for the adaptive LIF neuron, there is also an adaptive negative feedback $u_f$ input, so\n",
       "\n",
       "\\begin{align}\n",
-      "u &= u_{in}-u_f \\\\\n",
+      "u_{net} &= u_{in}-u_f \\\\\n",
       "\\end{align}\n",
       "\n",
       "The adaptive feedback term has the equivalent dynamics of a first order low-pass filter (i.e. a simple synapse) so that\n",
@@ -94,29 +95,136 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Steady state"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "To answer what is the steady state firing rate, we look at the dynamics of $u$. If we assume $u_{in}$ is held constant,\n",
       "\n",
       "\\begin{align}\n",
-      "\\dot{u} &= -\\dot{u}_f \\\\\n",
+      "\\dot{u}_{net} &= -\\dot{u}_f \\\\\n",
       " &= -\\frac{1}{\\tau_f}u_f + \\frac{\\alpha_f}{\\tau_f} f \\\\\n",
       "\\end{align}\n",
       "\n",
-      "At steady state, $\\dot{u}=0$ so\n",
+      "At steady state, $\\dot{u}_{net}=0$ so\n",
       "\n",
       "\\begin{align}\n",
-      "\\alpha_ff &= u_f \\\\\n",
+      "u_f &= \\alpha_ff \\\\\n",
       "\\end{align}\n",
       "\n",
-      "Substituting the steady state feedback into the firing rate equation,\n",
+      "and\n",
       "\n",
       "\\begin{align}\n",
-      "f &= \\frac{1}{t_{ref}-\\tau_m\\ln\\left(1-\\frac{1}{u_{in}-\\alpha_f f}\\right)} \\\\\n",
+      "u_{net} &= u_{in} - \\alpha_ff \\\\\n",
       "\\end{align}\n",
       "\n",
-      "Solving for $f$ would yield the steady-state firing rate. Unfortunately, there isn't an analytical solution to this equation. However we can find the firing rate numerically using the bisection method as in the adaptive LIF notebook."
+      "The steady state firing rate would then be\n",
+      "\n",
+      "\\begin{align}\n",
+      "f &= \\frac{1}{t_{ref}-\\tau_m\\ln\\left(1-\\frac{x_t}{u_{in}-\\alpha_f f}\\right)} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Unfortunately, there isn't an analytical solution for $f$ for this equation. However we can find the firing rate numerically using the bisection method in a similar manner to the mean feedback approximation of the spiking adaptive LIF [notebook](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/neuron/adaptive_LIF_neuron.ipynb#Mean-feedback-approximation---numerical-solution). In contrast to the mean feedback approximation method, we don't need to compensate for the refractory period decay of the feedback in $\\alpha_f$."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Dynamics"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We would like to know the firing rate changes over time, $\\frac{df}{dt}$. To begin, recall that $u_{net} = u_{in} - u_f$, so\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\dot{u}_{net} &= -\\dot{u}_f \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "where\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\tau_f\\dot{u}_f &= -u_f+\\alpha_f f \\\\\n",
+      "\\dot{u}_f &= -\\frac{1}{\\tau_f}u_f+\\frac{1}{\\tau_f}\\alpha_f f \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Therefore,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\dot{u}_{net} &= \\frac{1}{\\tau_f}u_f-\\frac{1}{\\tau_f}\\alpha_f f \\\\\n",
+      "\\tau_f\\dot{u}_{net} &= u_f-\\alpha_f f \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Since,  $u_{net} = u_{in} - u_f$, \n",
+      "\n",
+      "$$u_f = -u_{net}+u_{in}$$\n",
+      "\n",
+      "and so\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\tau_f\\dot{u}_{net} &= -u_{net}+u_{in}-\\alpha_f f \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Returning to the firing rate equation,\n",
+      "\n",
+      "\\begin{align}\n",
+      "f &= \\frac{1}{t_{ref}-\\tau_m\\ln\\left(1-\\frac{x_t}{u_{net}}\\right)} \\\\\n",
+      "\\frac{df}{dt} &= \\frac{\\partial f}{\\partial u_{net}}\\frac{\\partial u_{net}}{\\partial t}\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\frac{\\partial f}{\\partial u_{net}} &= \n",
+      "    \\frac{-1}{\\left(t_{ref}-\\tau_m\\ln\\left(1-\\frac{x_t}{u_{net}}\\right)\\right)^2}\n",
+      "    \\left(\\frac{-\\tau_m}{1-\\frac{x_t}{u_{net}}}\\right)\n",
+      "    \\left(\\frac{x_t}{{u_{net}}^2}\\right) \\\\\n",
+      " &= f^2\\frac{\\tau_m}{\\frac{u_{net}-x_t}{u_{net}}}\\frac{x_t}{{u_{net}}^2} \\\\\n",
+      " &= f^2\\frac{\\tau_mx_t}{u_{net}(u_{net}-x_t)} \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Therefore, \n",
+      "\\begin{align}\n",
+      "\\frac{df}{dt} &= \n",
+      "    f^2\\frac{\\tau_mx_t}{u_{net}(u_{net}-x_t)}\n",
+      "    \\frac{1}{\\tau_f}(-u_{net}+u_{in}-\\alpha_f f) \\\\\n",
+      " &= f^2\\frac{\\tau_mx_t}{\\tau_f}\\frac{1}{u_{net}(u_{net}-x_t)}\n",
+      "    (-u_{net}+u_{in}-\\alpha_f f) \\\\\n",
+      " &= k_2f^2 + k_3f^3  \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "where \n",
+      "\n",
+      "\\begin{align}\n",
+      "k_2 &= \\frac{\\tau_mx_t}{\\tau_f}\\frac{(-u_{net}+u_{in})}{u_{net}(u_{net}-x_t)} \\\\\n",
+      "k_3 &= \\frac{\\tau_mx_t}{\\tau_f}\\frac{-\\alpha_f}{u_{net}(u_{net}-x_t)} \\\\\n",
+      "\\end{align}"
      ]
     },
     {
@@ -214,6 +322,14 @@
       }
      ],
      "prompt_number": 100
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Simulations"
+     ]
     },
     {
      "cell_type": "code",
