Consolidate NEF dynamics vs adaptation derivation

--- a/design/NEF_dynamics_vs_adaptation.ipynb
+++ b/design/NEF_dynamics_vs_adaptation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d9e05651441141e58be1cd36b16863ce925c7c5eb7febc918b08ede0428a995b"
+  "signature": "sha256:619e4234d23c713007db20f1d1557cc38865964eb880599016ea8c4ed663f9ae"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -878,36 +878,28 @@
       "(1-A'H(s))X(s) &= A'H(s)d_2\\eta_2(s) + B'H(s)U(s)+B'H(s)d_1\\eta_1(s) \\\\\n",
       "X(s) &= \\frac{A'H(s)}{1-A'H(s)}d_2\\eta_2(s) + \\frac{B'H(s)}{1-A'H(s)}U(s) + \\frac{B'H(s)}{1-A'H(s)}d_1\\eta_1(s) \\\\\n",
       " &= \\frac{A'}{1/H(s)-A'}d_2\\eta_2(s) + \\frac{B'}{1/H(s)-A'}U(s) + \\frac{B'}{1/H(s)-A'}d_1\\eta_1(s) \\\\\n",
-      " &= \\frac{A'}{\\tau_{syn}s+1-A'}d_2\\eta_2(s) + \\frac{B'}{\\tau_{syn}s+1-A'}U(s) + \n",
+      " &= \\frac{A'}{\\tau_{syn}s+1-A'}d_2\\eta_2(s) + \n",
+      "    \\frac{B'}{\\tau_{syn}s+1-A'}U(s) +\n",
       "    \\frac{B'}{\\tau_{syn}s+1-A'}d_1\\eta_1(s) \\\\\n",
+      " &= \\frac{1-\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+1+\\tau_{syn}/\\tau_{sys}-1}d_2\\eta_2(s) +\n",
+      "    \\frac{\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+1+\\tau_{syn}/\\tau_{sys}-1}U(s) +\n",
+      "    \\frac{\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+1+\\tau_{syn}/\\tau_{sys}-1}d_1\\eta_1(s) \\\\\n",
+      " &= \\frac{1-\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+\\tau_{syn}/\\tau_{sys}}d_2\\eta_2(s) +\n",
+      "    \\frac{\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+\\tau_{syn}/\\tau_{sys}}U(s) +\n",
+      "    \\frac{\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+\\tau_{syn}/\\tau_{sys}}d_1\\eta_1(s) \\\\\n",
+      " &= \\frac{\\tau_{sys}/\\tau_{syn}-1}{\\tau_{sys}s+1}d_2\\eta_2(s) +\n",
+      "    \\frac{1}{\\tau_{sys}s+1}U(s) +\n",
+      "    \\frac{1}{\\tau_{sys}s+1}d_1\\eta_1(s) \\\\\n",
       "\\end{align}\n",
       "\n",
-      "Where we see components for the spike noise injections $\\eta_1$ and $\\eta_2$ and the input $u$. Next, what is the effect of the two noise components when we've set $A'$ and $B'$ to implement a system with first order dynamics governed by $\\tau_{sys}$? Recall that \n",
+      "Where we see components for the spike noise injections $\\eta_1$ and $\\eta_2$ and the input $u$. See that we've set $A'$ and $B'$ to implement the system with first order dynamics governed by $\\tau_{sys}$.\n",
       "\n",
       "\\begin{align}\n",
       "A' &= -\\frac{\\tau_{syn}}{\\tau_{sys}}+1 \\\\\n",
       "B' &= \\frac{\\tau_{syn}}{\\tau_{sys}} \\\\\n",
       "\\end{align}\n",
       "\n",
-      "Starting with the $\\eta_1$ component,\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\frac{B'}{\\tau_{syn}s+1-A'}d_1\\eta_1(s) &= \n",
-      "    \\frac{\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+1+\\tau_{syn}/\\tau_{sys}-1}d_1\\eta_1(s) \\\\\n",
-      " &= \\frac{\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+\\tau_{syn}/\\tau_{sys}}d_1\\eta_1(s) \\\\\n",
-      " &= \\frac{1}{\\tau_{sys}s+1}d_1\\eta_1(s) \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "We see that $\\eta_1$ is filtered by the system time constant but is unaffected by the synaptic time constant, which explains why adding spiking input noise did not affect the trend observed in the simulations. Moving on to $\\eta_2$,\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\frac{A'}{\\tau_{syn}s+1-A'}d_2\\eta_2(s) &= \n",
-      "    \\frac{1-\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+1+\\tau_{syn}/\\tau_{sys}-1}d_2\\eta_2(s) \\\\\n",
-      " &= \\frac{1-\\tau_{syn}/\\tau_{sys}}{\\tau_{syn}s+\\tau_{syn}/\\tau_{sys}}d_2\\eta_2(s) \\\\\n",
-      " &= \\frac{\\tau_{sys}/\\tau_{syn}-1}{\\tau_{sys}s+1}d_2\\eta_2(s) \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "We see that $\\eta_2$ is likewise filtered by $\\tau_{sys}$ but also scaled by a gain of $\\tau_{sys}/\\tau_{syn}-1$. Plotting the gain for fixed $\\tau_{sys}$ as $\\tau_{syn}$ varies,"
+      "We see that $\\eta_1$ is filtered by the system time constant but is unaffected by the synaptic time constant, which explains why adding spiking input noise did not affect the trend observed in the simulations. We see that $\\eta_2$ is likewise filtered by $\\tau_{sys}$ but also scaled by a gain of $\\tau_{sys}/\\tau_{syn}-1$. Plotting the gain for fixed $\\tau_{sys}$ as $\\tau_{syn}$ varies,"
      ]
     },
     {
