--- a/neuron/adaptive_LIF_neuron.ipynb
+++ b/neuron/adaptive_LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f2eb4c5edefbc444ee8143c3a0df382f4fd1cfb99153272f8fcb64f5270996d5"
+  "signature": "sha256:8fc569e1bee4172c0110a8173c244471dfd8abbcf5fe6db979defad7111351ed"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -268,6 +268,14 @@
       "An adaptive neuron works analogously to this intuition demo. For a step change in its input $u_{in}$, the neuron fires quickly as if $u_{in}$ were its only input. As the $u_f$ feedback kicks in, its firing rate reduces until reaching steady state. Adaptive neurons thus drive a synapse to a steady state faster than a nonadaptive neuron.\n",
       "\n",
       "Next we show that indeed the adaptive neuron initially spikes quickly and then slows its firing rate."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Adaptation slows the initial firing rate"
      ]
     },
     {
