--- a/neuron/adaptive_LIF_rate_neuron.ipynb
+++ b/neuron/adaptive_LIF_rate_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:922981f7f6307965657d728743f85ef08ce40d6cfa65c8072db155a55a886be4"
+  "signature": "sha256:59e22afefe5288b95dc16bbae22d40286d949410447276045ff3f2a8cb882e9c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -59,7 +59,7 @@
       "The LIF neuron firing rate is described by\n",
       "\n",
       "\\begin{align}\n",
-      "f &= \\frac{1}{t_{ref}-\\tau_m\\left(1-\\frac{x_t}{u_{net}}\\right)} \\\\\n",
+      "f &= \\frac{1}{t_{ref}-\\tau_m\\ln\\left(1-\\frac{x_t}{u_{net}}\\right)} \\\\\n",
       "\\end{align}\n",
       "\n",
       "where\n",
