cleanup ralif steady state derivations

--- a/neuron/figures/adaptive_LIF.tex
+++ b/neuron/figures/adaptive_LIF.tex
@@ -1,5 +1,5 @@
-\documentclass[convert={density=300,size=350x200,outext=.png}]{standalone}
-% \documentclass{standalone}
+% \documentclass[convert={density=300,size=350x200,outext=.png}]{standalone}
+\documentclass{standalone}
 \usepackage{tikz}
 \usetikzlibrary{shapes, arrows}
 
